Lexing/test_cases/good/int-range-3.cl
(* some integer literals *)
0
99
0777                             (* this is *decimal* 777 *)
2147483647                       (* largest representable *)
2147483647                       (* largest representable (again to ensure errno resetting works) *)

