Lexing/test_cases/bad/int-range-2.cl
(* some integer literals *)
0
99
0777                             (* this is *decimal* 777 *)
2147483647                       (* largest representable *)
012345678901234567890123456789   (* long ... *)
2147483647                       (* largest representable (again to ensure errno resetting works) *)

